@@ -1,3 +1,9 @@
+2009-01-06        dain
+
+	* beam.c, tcp.c, tcp.h: Fixed IAC handling inside MPI
+	  messages. Still not done properly, but double IACs are converted
+	  to one ASCII 255, and message length is correctly computed.
+
 2009-01-05        dain
 
 	* cmd.c, edit.c, edit.h, powwow.help, utils.c: Added an
